tests/negative/syntax/unknown-token/test.smol
package testing;

class Test {
	fn main$() Unit {
		var x String = "foo";
	}
}
